bug fix: dropdown menu on ticket block was appearing behind the component.

--- a/src/components/TicketBlock.module.css
+++ b/src/components/TicketBlock.module.css
@@ -15,7 +15,6 @@ p {
     padding: 15px 75px 15px 20px;
     cursor: pointer;
     transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
-    z-index: 10;
 }
 
 .ticket-block:hover {
@@ -95,7 +94,6 @@ p {
     position: relative;
     display: flex;
     flex-direction: column;
-    z-index: 1;
 }
 
 .dropdown-menu {
